      plugin.
    - Added build dependency on libpq-dev required by the postgresql plugin.
    - Let collectd-dbg and collectd-dev depend on ${misc:Depends} - this is
      required when using debhelper.
  * debian/rules:
    - Disabled onewire plugin - owfs is not yet available in Debian.
    - Install contrib/snmp-probe-host.px to /usr/share/doc/collectd/examples/.
  * debian/patches:
    - Added perl-uninitialized-var.dpatch - upstream patch to fix an
      uninitialized variable warning causing a FTBFS because of -Werror.
    - Removed myplugin_strcpy.dpatch - applied upstream.
    - Removed perl_deadlock.dpatch - included upstream.
    - Removed memory_libstatgrab.dpatch - included upstream.
    - Removed collectd_memleak.dpatch - included upstream.
    - Removed snmp_memleak.dpatch - included upstream.
    - Removed memcached_fdleak.dpatch - included upstream.
    - Removed memcached_timeout.dpatch - included upstream.
    - Removed pod-errors.dpatch - included upstream.
  * debian/collectd.overrides:
    - Override "spelling-error-in-description" for the postgresql plugin name
      - all plugins are spelled lowercase.
  * debian/collectd.init.d:
    - Do not restart collectd if the configuration test fails.

 -- Sebastian Harl <sh@tokkee.org>  Sun, 07 Dec 2008 18:50:32 +0100

collectd (4.4.2-3) unstable; urgency=low

  * New debconf template translation:
    - nl.po, thanks to Eric Spreen (Closes: #502204).
    - sv.po, thanks to Martin Bagge (Closes: #504248).
  * debian/patches:
    - Added pod-errors.dpatch to fix some minor POD errors.
  * debian/rules:
    - Remove generated manpages in the clean target to avoid cluttering the
      source diff with the rebuilt manpages.
  * debian/collectd.conf:
    - Fixed a wrong type used in the "tail" plugin example.

 -- Sebastian Harl <sh@tokkee.org>  Sat, 06 Dec 2008 16:53:25 +0100

collectd (4.4.2-2) unstable; urgency=low

  * Removed the work around for #474087 (broken openipmi .pc files) introduced